--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Chat App</title>
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
   <script defer src="script.js"></script>
+  <script src="http://server.js/socket.io/socket.io.js"></script>
   <style>
     body {
       padding: 0;
