--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chat App</title>
-  <script defer src="http://worldwidechat.github.io:3000/socket.io/socket.io.js"></script>
+  <script defer src="https://worldwidechat.github.io:3000/socket.io/socket.io.js"></script>
   <script defer src="script.js"></script>
   
   <style>
