--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </form>
   <script  src="/socket.io/socket.io.js"></script>
     <script>
-    const socket = io('http://localhost:3000');
+    const socket = io('http://worldwidechat.herokuapp.com:3000');
     const name = prompt('name: ')
     const salon = document.getElementById('message-container');
     const machine = document.getElementById('send-container');
